feat: Add DistrictsTable component and integrate with sidebar navigation
- Added lodash as a dependency in package.json.
- Created DistrictsTable component for managing and viewing districts.
- Integrated DistrictsTable into the routing structure of the application.
- Updated SidebarContext to include a link to the new Districts page.
- Enhanced SearchBar component for searching districts.
- Implemented table and card views for displaying district data.
- Added debounce functionality for search input in DistrictsTable.
- Updated UserProfiles component to comment out unused code.
- Refactored table components to include TableHead for better structure.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "flatpickr": "^4.6.13",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
