--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.510.0",
+    "next": "^15.4.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -43,6 +45,8 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
+    "@types/next": "^9.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
